--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  nginx-proxy:
+  proxy:
     image: jwilder/nginx-proxy:alpine
     ports:
       - 80
@@ -9,18 +9,18 @@ services:
       - nginx-proxy-html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - /srv/docker/nginx-proxy/certs:/etc/nginx/certs:ro
-      - nginx-proxy-dhparam:/etc/nginx/dhparam
-      - nginx-proxy-vhostd/etc/nginx/vhost.d
+      - dhparam:/etc/nginx/dhparam
+      - vhostd:/etc/nginx/vhost.d
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
   
-  nginx-proxy-ssl:
+  ssl:
     image: jrcs/letsencrypt-nginx-proxy-companion:latest
     volumes_from:
-      - nginx-proxy
+      - proxy
     volumes:
       - /srv/docker/nginx-proxy/certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     depends_on:
-      - nginx-proxy
+      - proxy
 
