--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - nginx-proxy-html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - /srv/docker/nginx-proxy/certs:/etc/nginx/certs:ro
+      - /srv/docker/nginx-proxy/htpasswd:/etc/nginx/htpasswd
       - nginx-proxy-dhparam:/etc/nginx/dhparam
       - nginx-proxy-vhostd:/etc/nginx/vhost.d
     labels:
